<resources>
    <string name="app_developer">Smart Joseph</string>
    <string name="app_support_email">iamsmart@gmail.com</string>
    <string name="app_release_year">2018</string>
    <string name="action_settings">Settings</string>

    <string name="note_list_empty_label">There are no notes</string>

    <!--Feedback email-->
    <string name="feedback_email_header">Feedback for </string>
    <string name="feedback_email_body_hi">Hi,</string>
    <string name="feedback_email_body_content">I am using a %1$s running Android %2$s.</string>
    <string name="feedback_email_no_client">There is no email client installed.</string>
    <string name="feedback_client_selection_title">Select your email client:</string>

    <string name="new_note">New Note</string>
    <string name="edit_note">Edit</string>
    <string name="save_note">Save</string>
    <string name="delete_note">Delete</string>
    <string name="search_note">Search</string>
    <string name="cancel_note">Cancel</string>
    <string name="share_note">Share</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$s note</item>
        <item quantity="other">%1$s notes</item>
    </plurals>
    <string name="zero_notes">No notes found</string>
	
	<string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="note_title_hint">Title</string>
    <string name="note_body_hint">Note</string>
    <string name="note_date_created">created</string>
    <string name="note_date_edited">last edited</string>
    <string name="note_date_time_format">%1$s \u0020 %2$s</string>
    <string name="note_date_full_format">%1$s %2$s %3$s</string>

    <string name="loading">loading</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!--Title in the toolbar-->
    <string name="toolbar_title_new_note">New Note</string>
    <string name="toolbar_title_edit_note">Edit Note</string>

    <!--Share Intent chooser -->
    <string name="share_to">Share to:</string>
    <string name="share_no_app_found">No app available</string>

    <!-- Confirmation dialog -->
    <string name="confirm_dialog_delete_title">Confirm Deletion</string>
    <string name="confirm_dialog_delete_body">Delete the note </string>
    <string name="confirm_dialog_discard_new_note">Discard new note?</string>
    <string name="confirm_dialog_discard_changes">Discard changes?</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>

    <!-- Toast -->
    <string name="toast_note_save">The note has been saved</string>
    <string name="toast_note_deletion">The note has been deleted</string>
    <string name="toast_title_empty">Please enter a title</string>

    <!-- Thouthts -->
    <string name="first_thought">Everyday may not be a good day\nbut there is good in every day</string>

    <!-- Settings Preferences -->
    <string name="pref_general">General</string>
    <string name="pref_general_send_feedback_key">pref_key_feedback</string>
    <string name="pref_general_send_feedback_title">Send feedback</string>
    <string name="pref_general_send_feedback_summary">Send your feedback, comments and
    questions to me</string>
    <string name="pref_general_changelog_key">pref_key_changelog</string>
    <string name="pref_general_changelog_title">Changelog</string>
    <string name="pref_general_changelog_summary">Release notes</string>
    <string name="pref_general_about_title">About</string>
    <string name="pref_general_about_key">pref_key_about</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_appearance_show_num_notes_key">pref_key_subtitle</string>
    <string name="pref_appearance_show_num_notes_title">Show number of notes</string>
    <string name="pref_appearance_show_num_notes_summary">Enable subtitle in the toolbar</string>
    <string name="pref_appearance_font_size_key">pref_key_font_size</string>
    <string name="pref_appearance_font_size_title">Change font size</string>
    <string name="pref_appearance_font_size_dialog_title">Select font size</string>
    <string name="pref_appearance_single_tap_edit_key">pref_key_single_tap_edit</string>
    <string name="pref_appearance_single_tap_edit_title">Single touch edit</string>
    <string name="pref_appearance_single_tap_edit_summary">Tap the note text to begin editing</string>
    <string name="signup">Signup</string>
    <string name="not_registered">Not registered?</string>
    <string name="already_registered">Already registered?</string>
    <string name="signout">Signout</string>

</resources>
