<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".NoteListActivity">


    <item
        android:id="@+id/menu_item_signout"
        android:icon="@drawable/ic_logout"
        android:title="@string/signout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_search_note"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search_note"
        android:actionViewClass="android.support.v7.widget.SearchView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_new_note"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/new_note"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
